# commure

./: Makefile  README.md  enums.py  histories.csv  main.py  pyproject.toml  service.py  test.csv
config/: constants.py
enums/: game_types.py
models/: player.py  rating_history.py
services/: chess.py
tests/services/: conftest.py  test_chess.py
