[tool.poetry]
name = "commure-test"
version = "0.1.0"
description = ""
authors = ["Matheus Afonso <matheusafonsouza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"
tqdm = "^4.66.5"
pandas = "^2.2.3"
requests = "^2.32.3"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
